<resources>
    <string name="app_name">PhoneBook</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Phone">Phone</string>
    <string name="Birthdate">Birthdate</string>
    <string name="Location">Location</string>
    <string name="Street">Street</string>
    <string name="Number">Number</string>
    <string name="Insert">Insert</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Updated">Updated successfully</string>
    <string name="Deleted">Deleted successfully</string>
    <string name="Insertcanceled">INSERT CANCELED</string>
    <string name="cancel">CANCEL</string>
    <string name="OK">OK</string>
    <string name="Dialog">Do you want to delete this contact</string>
    <string name="Add">Add</string>
</resources>